Added option to count matches

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ universal = 0
 universal = 0
 
 [metadata]
-description-file = README.rst
+description_file = README.rst
 
 [flake8]
 exclude = build,.git,.hg,.tox,.lib,__pycache__
